# librog

./: .clangd  .gitignore  CMakeLists.txt  prepare_build.sh
doxygen/: Doxyfile
librog/: rog.cpp  rog.hpp  visitors.hpp
librog/details/: concepts.hpp  console.cpp  console.hpp  console_output.cpp  console_output.hpp
tests/: CMakeLists.txt  rog.test.cpp
